Bugfix: make thumbnail enhancer zoom functionality less jumpy when loading images

--- a/src/scss/modules/_thumbnail-enhancer.scss
+++ b/src/scss/modules/_thumbnail-enhancer.scss
@@ -107,7 +107,7 @@ div#posts-container {
         }
     }
 
-    &[data-thumb-zoom=true] article.post-preview:hover {
+    &[data-thumb-zoom=true] article.post-preview.loaded:hover {
         position: relative;
         overflow: visible;
 
